# pybazel

./: .bazelrc  .coveragerc  .gitignore  .gitlab-ci.yml  BUILD  Jenkinsfile  MODULE.bazel  MODULE.bazel.bak  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WORKSPACE  bazel_coverage_with_html.sh  pyproject.toml  pytest.ini  requirements.txt  run_bazel_coverage.sh  run_coverage.sh  run_tests.sh
.github/workflows/: tests.yml
src/: BUILD  BUILD.simple  __init__.py  calculator.py  string_utils.py
src/tests/: BUILD  test_calculator.py  test_string_utils.py
